Fix dark mode styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -845,16 +845,6 @@ h4 {
   line-height: 1.5 !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  img:not([src$=".svg"]) {
-    filter: brightness(60%);
-  }
-
-  :root {
-    --backgroundColor: black;
-    --color: white;
-  }
-}
 .wallpaper {
   width: 100%;
 }
