--- a/scss/_otherVisualConsiderations.scss
+++ b/scss/_otherVisualConsiderations.scss
@@ -59,16 +59,6 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  img:not([src$=".svg"]) {
-    filter: brightness(60%);
-  }
-  :root {
-    --backgroundColor: black;
-    --color: white;
-  }
-}
-
 .wallpaper {
   width: 100%;
   @media (min-width: 768px) {
